tests/expected_invalid_lexer_unexpected_character.diag.out
<input>:3:13: error: unexpected character '@'
            "é" @ 2
                ^
